plugins {
    id 'java-library'
    id 'io.spring.dependency-management' version '1.1.7'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.boot:spring-boot-dependencies:3.4.5"
    }
}

group = 'com.traveler.common'
version = '0.0.1-SNAPSHOT'
description = 'api'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // common-core
    api project(':common-module:core')

    // Web
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-api:2.8.13'

    // Data
    implementation 'org.springframework.data:spring-data-commons'
}

tasks.named('test') {
    useJUnitPlatform()
}
